--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
+    "nanoid": "^4.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
