--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "unplugin-vue-macros": "^1.9.1",
     "vite": "^4.1.4",
     "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-vue-devtools": "^0.0.15",
     "vitest": "^0.29.2",
     "vue-tsc": "^1.2.0"
   },
